k8s/k3sa/infra/monitoring/loki/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.local.bigd.no`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: loki-gateway
          port: 80
  tls:
    secretName: local-bigd-no-tls
